<resources>
    <string name="app_name">Vendor Services</string>
    <string name="channel_id" translatable="false">BaseetVendor-channel</string>
    <string name="channel_name" translatable="false">BaseetVendor</string>
    <string name="sign_in">Sign In</string>
    <string name="want_to_login_your_admin_account_admin_login_in"><![CDATA[Want to login your admin account? Admin Login In]]></string>
    <string name="vendor_login_form">Vendor Login Form</string>
    <string name="your_email">Your Email</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="remember_me">Remember me</string>
    <string name="translator_services">Translator Services</string>
    <string name="add_new_translator_service">Add New Translator Service</string>
    <string name="help">Help</string>
    <string name="english_en">English(EN)</string>
    <string name="arabic_ar">Arabic(AR)</string>
    <string name="translator_service_name">Translator Service Name</string>
    <string name="en">(EN)</string>
    <string name="name">Name</string>
    <string name="translator_service_description">Translator Service Description</string>
    <string name="description">Description</string>
    <string name="zone">Zone</string>
    <string name="scenic_views">Scenic views</string>
    <string name="select_scenic_views">Select Scenic views</string>
    <string name="bathroom">Bathroom</string>
    <string name="select_bathroom">Select Bathroom</string>
    <string name="essentials">Essentials</string>
    <string name="select_essentials">Select Essentials</string>
    <string name="clothes_storage">Clothes storage</string>
    <string name="select_clothes_storage">Select Clothes storage</string>
    <string name="private_bbq_grill">Private BBQ grill</string>
    <string name="select_private_bbq_grill">Select Private BBQ grill</string>
    <string name="utilities">Utilities</string>
    <string name="select_utilities">Select Utilities</string>
    <string name="on_call">On Call</string>
    <string name="in_person">In Person</string>
    <string name="doc">Doc</string>
    <string name="driving_type">Driving Type</string>
    <string name="self_driving">Self-Driving</string>
    <string name="driver">Driver</string>
    <string name="car_type_en">Car Type (EN)</string>
    <string name="car_model_en">Car Model (EN)</string>
    <string name="translation_from">Translation from</string>
    <string name="translation_to">Translation to</string>
    <string name="service_date">Service date</string>
    <string name="service_hour">Service Hour</string>
    <string name="days">Days</string>
    <string name="Select_Items">Select Items</string>
    <string name="Done">Done</string>
    <string name="_EN"> (EN)</string>
    <string name="_AR"> (AR)</string>
    <string name="home_type_en">Home Type (EN)</string>
    <string name="portfolio_video">Portfolio Video</string>
    <string name="price">Price</string>
    <string name="translator_image">Translator Image</string>
    <string name="choose_image">Choose Image</string>
    <string name="choose">Choose</string>
    <string name="submit">Submit</string>
    <string name="orders">Orders</string>
    <string name="all_orders">All Orders</string>
    <string name="search">Search</string>
    <string name="cancelled_orders">Cancelled Orders</string>
    <string name="s_no">S.No:</string>
    <string name="_1">1</string>
    <string name="testio2">testio2</string>
    <string name="order_type">Order Type :</string>
    <string name="takeaway">Takeaway</string>
    <string name="date">Date :</string>
    <string name="_25_03_2024">25/03/2024</string>
    <string name="order_status">Order Status :</string>
    <string name="confirmed_orders">Confirmed Orders</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="based_on_15_reviews">Based on 15 Reviews</string>
    <string name="martin_blair">Martin Blair</string>
    <string name="_2_days_ago">2 Days Ago</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_is_sidddmply_dummy_text_of_the_printing_and_typesetting_industry"><![CDATA[Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is sidddmply dummy text of the printing and typesetting industry.]]></string>
    <string name="piysah_pran">Piysah pran</string>
    <string name="dashboard">Dashboard</string>
    <string name="services_statistics">Services Statistics</string>
    <string name="total_services">Total Services</string>
    <string name="ordered_services">Ordered Services</string>
    <string name="completed_services">Completed Services</string>
    <string name="rejected_services">Rejected Services</string>
    <string name="_0">0</string>
    <string name="yearly_statistics">Yearly Statistics</string>
    <string name="total_earning">Total earning :</string>
    <string name="commission_given">Commission Given :</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="search_by_order">Search by Order</string>
    <string name="edit_bank_info">Edit Bank Info</string>
    <string name="edit_info">Edit Info</string>
    <string name="bank_name"><![CDATA[Bank Name *]]></string>
    <string name="sbi">SBI</string>
    <string name="branch_name">Branch Name*</string>
    <string name="sd_nagar">Sd Nagar</string>
    <string name="holder_name"><![CDATA[Holder Name *]]></string>
    <string name="abdul_syed">Abdul Syed</string>
    <string name="account_no"><![CDATA[Account No *]]></string>
    <string name="_1234568952141">1234568952141</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="edit_translater_information">Edit Translater Information</string>
    <string name="translater_name"><![CDATA[Translater Name *]]></string>
    <string name="upload_logo">Upload Logo</string>
    <string name="choose_file">Choose File</string>
    <string name="browse">Browse</string>
    <string name="contact_number">Contact Number*</string>
    <string name="_91_582588445">+91 -582588445</string>
    <string name="address">Address*</string>
    <string name="hyderabad">Hyderabad</string>
    <string name="choose_images">Choose Images</string>
    <string name="order_detail_view">Order Detail View</string>
    <string name="order_detail">Order Detail</string>
    <string name="no_data_found">No Data Found</string>
    <string name="complete">Complete</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="processing">Processing</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order">Order</string>
    <string name="_00">00</string>
    <string name="_00_00_0000">00 00 0000</string>
    <string name="order_details">Order Details:</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="type">Type :</string>
    <string name="na">NA</string>
    <string name="order_payment">Order Payment :</string>
    <string name="pay_type">Pay Type :</string>
    <string name="traveling_persons">Traveling Persons :</string>
    <string name="rent_type">Rent Type :</string>
    <string name="home_days">Home Days :</string>
    <string name="amenities">Amenities :</string>
    <string name="discount">Discount :</string>
    <string name="total">Total :</string>
    <string name="customer">Customer</string>
    <string name="brijraj_singh">Brijraj Singh</string>
    <string name="_18_orders">18 Orders</string>
    <string name="contact_info">Contact Info</string>
    <string name="at">\@</string>
    <string name="testios_gmail_com">Testios@gmail.com</string>
    <string name="_9887667567">9887667567</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="brijraj">Brijraj</string>
    <string name="contact">Contact :</string>
    <string name="translater_information">Translater Information</string>
    <string name="translater_info">Translater info</string>
    <string name="phone">Phone :</string>
    <string name="address_">Address :</string>
    <string name="admin_commission">Admin commission :</string>
    <string name="refunded_orders">Refunded Orders</string>
    <string name="translater_service_update">Translater Service Update</string>
    <string name="service_update">Service Update</string>
    <string name="car_rental_available">Car Rental Available</string>
    <string name="short_description_en">Short Description (EN)</string>
    <string name="services_request_list">Services Request List</string>
    <string name="translater_bank_info">Translater Bank Info</string>
    <string name="my_bank_info">My Bank Info</string>
    <string name="bank_name_sbi">Bank Name : SBI</string>
    <string name="branch_malakpet">Branch : Malakpet</string>
    <string name="holder_name_657576575775">Holder Name : 657576575775</string>
    <string name="hyderabad_india">Hyderabad,India</string>
    <string name="translater_service_list">Translater Service List</string>
    <string name="service_list">Service List</string>
    <string name="add_new_service">Add new Service</string>
    <string name="search_by_name">Search By Service Name</string>
    <string name="_6">6</string>
    <string name="translater_setup">Translater Setup</string>
    <string name="translator_wallet">Translator Wallet</string>
    <string name="withdrawable_balance">WITHDRAWABLE BALANCE</string>
    <string name="request_withdrawn">Request Withdrawn</string>
    <string name="pending_withdraw">PENDING WITHDRAW</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="s_no_">S.No:</string>
    <string name="amount">Amount :</string>
    <string name="status">Status:</string>
    <string name="note">Note :</string>
    <string name="lorun_ipsam">Lorun Ipsam</string>
    <string name="request_time">Request Time :</string>
    <string name="_12_45pm">12:45PM</string>
    <string name="close">Close :</string>
    <string name="related_services_as_per_customer_request">Related Services as Per Customer Request.</string>
    <string name="select_langauge">Select Langauge</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="lorum_ipsum">Lorum ipsum</string>
    <string name="service_request">Service Request</string>
    <string name="confirmed">Confirmed</string>
    <string name="completed">Completed</string>
    <string name="canceled">Canceled</string>
    <string name="refunded">Refunded</string>
    <string name="pending">Pending Orders</string>
    <string name="confirmed_order">Confirmed Orders</string>
    <string name="all">All</string>
    <string name="translator_service">Translator Service</string>
    <string name="add_new">Add New</string>
    <string name="list">List</string>
    <string name="translator_config">Translator Config</string>
    <string name="clinical_evaluation_request">Clinical Evaluation Request</string>
    <string name="consultation_request">Consultation Request</string>
    <string name="today_s_appointments">Today\'s Appointments</string>
    <string name="previous_appointments">Previous Appointments</string>
    <string name="prescription">Prescription</string>
    <string name="my_translator">My Translator</string>
    <string name="followup_prescription">FollowUp Prescription</string>
    <string name="referrals">Referrals</string>
    <string name="referrals_follow_ups">Referrals-Follow-Ups</string>
    <string name="referral_discharge_history">Referral-Discharge History</string>
    <string name="referral_doc_history">Referral-Doc History</string>
    <string name="daily_vital_updates">Daily Vital Updates</string>
</resources>