<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".V.MyTranslotor.activity.Profile">

     <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/imgBack"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:background="?actionBarItemBackground"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:tint="@color/white"
            android:src="@drawable/baseline_arrow_back_ios_24">

        </androidx.constraintlayout.utils.widget.ImageFilterButton>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/translater_information"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLan"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/arabic_text"
                app:layout_constraintBottom_toBottomOf="@+id/toolBar"
                app:layout_constraintEnd_toEndOf="@+id/toolBar"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.appcompat.widget.AppCompatImageView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/info"
                android:tint="@color/black">

            </androidx.appcompat.widget.AppCompatImageView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/translater_info"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/corner"
            android:backgroundTint="#377DFF"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/help"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp">

        </androidx.appcompat.widget.AppCompatButton>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCover"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
           >

        </androidx.appcompat.widget.AppCompatImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-60dp"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop">

            </de.hdodenhof.circleimageview.CircleImageView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/address_"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCommission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/admin_commission"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/discount"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/corner"
                android:backgroundTint="#377DFF"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/edit_info"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp">

            </androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>